--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "eslintConfig": {
     "extends": [
       "@babel/plugin-transform-private-property-in-object",
-      "next/core-web-vitals"
+      "next/core-web-vitals",
+      "react-app"
     ],
     "rules": {
       "no-unused-vars": "warn"
