changes to package.json

--- a/package.json
+++ b/package.json
@@ -24,22 +24,8 @@
   },
   "eslintConfig": {
     "extends": [
-      "@babel/plugin-transform-private-property-in-object",
-      "next/core-web-vitals",
-      "react-app"
-    ],
-    "rules": {
-      "no-unused-vars": "warn"
-    },
-    "overrides": [
-      {
-        "files": [
-          "**/*.ts?(x)"
-        ],
-        "rules": {
-          "max-len": "warn"
-        }
-      }
+      "react-app",
+      "react-app/jest"
     ]
   },
   "browserslist": {
@@ -53,8 +39,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@babel/plugin-transform-private-property-in-object": "^7.24.6"
   }
 }
